5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1601_1805.log
== TEST (2019-03-28 13:36:34) 
-- CODE:
xa = float(input("Digite a coordenada de xa"))
xb = float(input("Digite a coordenada de xb"))
ya = float(input("Digite a coordenada de ya"))
yb = float(input("Digite a coordenada de yb")

xm = (xb + xa)/2
ym = (yb + ya)/2
print(round(xm, 1))
print(round(ym, 1))  
-- ERROR:
File "XXXX", line 6
    xm = (xb + xa)/2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:37:00) 
-- CODE:
xa = float(input("Digite a coordenada de xa"))
xb = float(input("Digite a coordenada de xb"))
ya = float(input("Digite a coordenada de ya"))
yb = float(input("Digite a coordenada de yb")

xm = (xb + xa)/2
ym = (yb + ya)/2
print(round(xm, 1))
print(round(ym, 1))  
-- ERROR:
File "XXXX", line 6
    xm = (xb + xa)/2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:37:18) 
-- CODE:
xa = float(input("Digite a coordenada de xa"))
xb = float(input("Digite a coordenada de xb"))
ya = float(input("Digite a coordenada de ya"))
yb = float(input("Digite a coordenada de yb")

xm = (xb + xa)//2
ym = (yb + ya)//2
print(round(xm, 1))
print(round(ym, 1))  
-- ERROR:
File "XXXX", line 6
    xm = (xb + xa)//2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:38:20) 
-- CODE:
xa = float(input("Digite a coordenada de xa"))
xb = float(input("Digite a coordenada de xb"))
ya = float(input("Digite a coordenada de ya"))
yb = float(input("Digite a coordenada de yb")
xm = (xb + xa)/2
ym = (yb + ya)/2
print(round(xm, 1))
print(round(ym, 1))  
-- ERROR:
File "XXXX", line 5
    xm = (xb + xa)/2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:39:34) 
-- CODE:
xa = float(input("Digite a coordenada de xa"))
xb = float(input("Digite a coordenada de xb"))
ya = float(input("Digite a coordenada de ya"))
yb = float(input("Digite a coordenada de yb")
xm = (xb + xa)/2
ym = (yb + ya)/2
print(round(xm, 1))
print(round(ym, 1))  
-- ERROR:
File "XXXX", line 5
    xm = (xb + xa)/2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:40:18) 
-- CODE:
xa = float(input("Digite a coordenada de xa"))
xb = float(input("Digite a coordenada de xb"))
ya = float(input("Digite a coordenada de ya"))
yb = float(input("Digite a coordenada de yb"))
xm = (xb + xa)/2
ym = (yb + ya)/2
print(round(xm, 1))
print(round(ym, 1))  
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:41:52) 
-- CODE:
xa = float(input("Digite a coordenada de xa"))
ya = float(input("Digite a coordenada de ya"))
xb = float(input("Digite a coordenada de xb"))
yb = float(input("Digite a coordenada de yb"))
xm = (xb + xa)/2
ym = (yb + ya)/2
print(round(xm, 1))
print(round(ym, 1))  
-- EXECUTION TIME:
0.145538
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
